3.2.0
 - feat: allow specifying the minimizer method for fitting (#21)
 - tests: rename experimental test data files according to
   afmformats scheme (#20)
3.1.4
 - docs: preprocessing methods not correctly rendered
3.1.3
 - fix: make sure that AFM metadata contain the spring constant and
   raise a MissingMetaDataError if this is not the case
 - ref: deprecate `IndentationPreprocessor` class in favor of a more
   flat submodule (#17)
3.1.2
 - docs: add POC table to docs
3.1.1
 - fix: do not modify preprocessing options when applying them (create
   a copy of the dictionary)
 - ref: remove `Indentation.reset` in favor of `AFMData.reset_data`
3.1.0
 - feat: new contact point estimation method "fit_constant_polynomial"
   which applies a piece-wise constant and polynomial fit
 - feat: contact point estimation methods now return detailed
   information about the procedure (currently plottable data to
   understand the process)
 - fix: spatial smoothing not working in some cases (#15)
 - enh: add `steps_optional` in preprocessing to allow fine-grained
   control about order of application
 - ref: remove "...smoothed" column data (which was never used anyway);
   instead, apply smoothing directly to AFMData subclass
 - ref: rename `require_steps` to `steps_required` in preprocessing
   decorator
 - setup: bump afmformats from 0.16.0 to 0.16.4
3.0.0
 - BREAKING CHANGE: The contact point estimation method "scheme_2020"
   has been removed, although it has been the default for some time.
   It turns out that it does not perform so well and there are other
   more stable methods (to be implemented). Furthermore, some of the
   contact point estimation methods were improved so that basically
   many tests had to be updated. This will not break your analysis,
   it just means your contact points will change.
 - feat: implement options for preprocessing methods
 - feat: the "correct_tip_offset" preprocessing method now
   accepts the "method" argument (see new poc submodule)