@@ -14,6 +14,8 @@ data_path = pathlib.Path(__file__).resolve().parent / "data"
     ["gradient_zero_crossing", 1895],
     ["fit_constant_line", 1919],
     ["fit_constant_polynomial", 1885],
+    ["fit_line_polynomial", 1887],
+    ["frechet_direct_path", 1903],
     ["deviation_from_baseline", 1908],
 ])
 def test_poc_estimation(method, contact_point):
@@ -27,6 +29,8 @@ def test_poc_estimation(method, contact_point):
     ["gradient_zero_crossing", 1895],
     ["fit_constant_line", 1919],
     ["fit_constant_polynomial", 1885],
+    ["fit_line_polynomial", 1887,],
+    ["frechet_direct_path", 1903],
     ["deviation_from_baseline", 1908],
 ])
 def test_poc_estimation_details(method, contact_point):
@@ -41,6 +45,8 @@ def test_poc_estimation_details(method, contact_point):
     ["gradient_zero_crossing", 1895],
     ["fit_constant_line", 1919],
     ["fit_constant_polynomial", 1885],
+    ["fit_line_polynomial", 1887],
+    ["frechet_direct_path", 1903],
     ["deviation_from_baseline", 1908],
 ])
 def test_poc_estimation_via_indent(method, contact_point):
@@ -72,3 +78,10 @@ def test_poc_details_deviation_from_baseline():
             np.mean(pocd["plot baseline mean"][1]),
             -7.573822405258677e-12,
             atol=0)
+
+
+def test_poc_frechet_direct_path():
+    force = np.zeros(100)
+    force[50:] = np.arange(50)**2
+    cp = poc.poc_frechet_direct_path(force)
+    assert cp == 62  # makes sense
